Add plannedOnly option to get flights
